# test_teb

./: CMakeLists.txt  map_c.txt  map_g (copy).txt  map_g.txt  map_g_n.txt
cmake_modules/: FindG2O.cmake
example/: teb_basics.cpp  teb_overall.cpp
include/: global_planning_handler.hpp  transform_data.h
include/base_local_planner/: BaseLocalPlannerConfig.h  goal_functions.h  map_grid.h  world_model.h
include/costmap_2d/: Costmap2DConfig.h  GenericPluginConfig.h  InflationPluginConfig.h  ObstaclePluginConfig.h  VoxelGrid.h  VoxelPluginConfig.h  costmap_2d_ros.h  footprint.h
include/costmap_converter/: CostmapToDynamicObstaclesConfig.h  CostmapToLinesDBSMCCHConfig.h  CostmapToLinesDBSRANSACConfig.h  CostmapToPolygonsDBSConcaveHullConfig.h  CostmapToPolygonsDBSMCCHConfig.h  ObstacleArrayMsg.h  ObstacleMsg.h  costmap_converter_interface.h
include/dynamic_reconfigure/: BoolParameter.h  Config.h  ConfigDescription.h  DoubleParameter.h  Group.h  GroupState.h  IntParameter.h  ParamDescription.h  ReconfigureRequest.h  ReconfigureResponse.h  SensorLevels.h  StrParameter.h  TestConfig.h  client.h  server.h
include/g2o/: config.h
include/geometry_msgs/: Accel.h  AccelStamped.h  AccelWithCovariance.h  Inertia.h  InertiaStamped.h  Point.h  Point32.h  PointStamped.h  Polygon.h  PolygonStamped.h  Pose.h  Pose2D.h  PoseArray.h  PoseStamped.h  PoseWithCovariance.h  PoseWithCovarianceStamped.h  Quaternion.h  QuaternionStamped.h  Transform.h  TransformStamped.h  Twist.h  TwistStamped.h  TwistWithCovariance.h  Vector3.h  Vector3Stamped.h  Wrench.h  WrenchStamped.h
include/map_msgs/: GetMapROIRequest.h  GetMapROIResponse.h  GetPointMapROIRequest.h  GetPointMapROIResponse.h  GetPointMapRequest.h  GetPointMapResponse.h  OccupancyGridUpdate.h  PointCloud2Update.h  ProjectedMap.h  ProjectedMapInfo.h  ProjectedMapsInfoRequest.h  ProjectedMapsInfoResponse.h  SaveMapRequest.h  SaveMapResponse.h  SetMapProjectionsRequest.h  SetMapProjectionsResponse.h
include/mbf_msgs/: CheckPathRequest.h  CheckPathResponse.h  CheckPointRequest.h  CheckPointResponse.h  CheckPoseRequest.h  CheckPoseResponse.h  ExePathAction.h  ExePathActionFeedback.h  ExePathActionGoal.h  ExePathActionResult.h  ExePathFeedback.h  ExePathGoal.h  ExePathResult.h  GetPathAction.h  GetPathActionFeedback.h  GetPathActionGoal.h  GetPathActionResult.h  GetPathFeedback.h  GetPathGoal.h  GetPathResult.h  MoveBaseAction.h  MoveBaseActionFeedback.h  MoveBaseActionGoal.h  MoveBaseActionResult.h  MoveBaseFeedback.h  MoveBaseGoal.h  MoveBaseResult.h  RecoveryAction.h  RecoveryActionFeedback.h  RecoveryActionGoal.h  RecoveryActionResult.h  RecoveryFeedback.h  RecoveryGoal.h  RecoveryResult.h
include/nav_core/: parameter_magic.h
include/nav_msgs/: GetMapAction.h  GetMapActionFeedback.h  GetMapActionGoal.h  GetMapActionResult.h  GetMapFeedback.h  GetMapGoal.h  GetMapRequest.h  GetMapResponse.h  GetMapResult.h  GetPlanRequest.h  GetPlanResponse.h  GridCells.h  LoadMapRequest.h  LoadMapResponse.h  MapMetaData.h  OccupancyGrid.h  Odometry.h  Path.h  SetMapRequest.h  SetMapResponse.h
include/pluginlib/: class_loader.hpp  class_loader_imp.hpp
include/ros/: advertise_service_options.h  assert.h  console_impl.h  file_log.h  publisher.h  ros.h  service_client.h  subscription_callback_helper.h  timer_manager.h
include/sensor_msgs/: BatteryState.h  CameraInfo.h  ChannelFloat32.h  CompressedImage.h  FluidPressure.h  Illuminance.h  Image.h  Imu.h  JointState.h  Joy.h  JoyFeedback.h  JoyFeedbackArray.h  LaserEcho.h  LaserScan.h  MagneticField.h  MultiDOFJointState.h  MultiEchoLaserScan.h  NavSatFix.h  NavSatStatus.h  PointCloud.h  PointCloud2.h  PointField.h  Range.h  RegionOfInterest.h  RelativeHumidity.h  SetCameraInfoRequest.h  SetCameraInfoResponse.h  Temperature.h  TimeReference.h
include/std_msgs/: Bool.h  Byte.h  ByteMultiArray.h  Char.h  ColorRGBA.h  Duration.h  Empty.h  Float32.h  Float32MultiArray.h  Float64.h  Float64MultiArray.h  Header.h  Int16.h  Int16MultiArray.h  Int32.h  Int32MultiArray.h  Int64.h  Int64MultiArray.h  Int8.h  Int8MultiArray.h  MultiArrayDimension.h  MultiArrayLayout.h  String.h  Time.h  UInt16.h  UInt16MultiArray.h  UInt32.h  UInt32MultiArray.h  UInt64.h  UInt64MultiArray.h  UInt8.h  UInt8MultiArray.h
include/teb_local_planner/: TebLocalPlannerReconfigureConfig.h  h_signature.h  homotopy_class_planner.h  obstacles.h  optimal_planner.h  planner_interface.h  teb_config.h  teb_local_planner_ros.h  timed_elastic_band.h  timed_elastic_band.hpp
include/tf/: message_filter.h  transform_datatypes.h
include/tf2/: buffer_core.h
include/tf2_ros/: message_filter.h
include/visualization_msgs/: ImageMarker.h  InteractiveMarker.h  InteractiveMarkerControl.h  InteractiveMarkerFeedback.h  InteractiveMarkerInit.h  InteractiveMarkerPose.h  InteractiveMarkerUpdate.h  Marker.h  MarkerArray.h  MenuEntry.h
lib2/costmap_2d/: costmap_2d_cloud  costmap_2d_markers  costmap_2d_node
save_map/: m_map.py  visualize.py
src/: costmap_2d_ros.cpp  graph_search.cpp  homotopy_class_planner.cpp  node_handle.cpp  obstacles.cpp  optimal_planner.cpp  teb_config.cpp  teb_local_planner_ros.cpp  test_optim_node.cpp  timed_elastic_band.cpp  visualization.cpp
src/sub_src/: buffer_core.cpp  costmap_2d.cpp  footprint.cpp  global_planning_handler.cpp  navfn.cpp  transform_data.cpp
